render user messages

--- a/style.css
+++ b/style.css
@@ -13,3 +13,22 @@
   bottom: 2em;
   display: none;
 }
+
+#messages {
+  height: 200px;
+  overflow-y: scroll;
+}
+
+
+#messages .message-container {
+  margin-bottom: 5px;
+  padding: 5px;
+  background: #fafafa;
+  border: 1px solid #eee;
+}
+.message-container .user {
+  font-size: 10px;
+}
+.message-container .message{
+  font-size: 14px;
+}
